[package]
name = "blueprint"
version = "0.0.1"
edition = "2021"
description = "Static state machine / protocol blueprints"
homepage = "https://github.com/yaws-rs/blueprint"
keywords = ["io", "uring", "epoll", "async"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/blueprint"
categories = ["science"]

[dependencies]

[features]
default = []
std = []

[package.metadata.docs.rs]
features = []
