[package]
name = "blueprint-tick-tock"
version = "0.0.1"
edition = "2021"
description = "state machine / protocol blueprints tick-tock"
homepage = "https://github.com/yaws-rs/blueprint"
keywords = ["io", "uring", "epoll", "async"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/blueprint"
categories = ["science"]

[dependencies]
blueprint = { path = "../", version = "0.0.1", default-features = false }

[features]
default = []
std = []

[package.metadata.docs.rs]
features = []
